  "un-hard code" the skill_used_no_damage combo problem
  refer to : http://forums.openkore.com/viewtopic.php?p=64881
- Typo'd packet name actor_died_or_disappeard renamed to
  actor_died_or_disappeared.
- PVP damage messages are now correctly displayed.
- Fix display of Clown/Gypsy class name.
- Warn about broken TCP/IP stack on Windows.

New features:
- Added XKoreProxy module. Set configuration to 'XKore proxy' to work as
  if on XKore 1 mode, but instead of injecting DLL, proxy the client connection
- dcOnDisconnect 2 will not disconnect when you run out of paid time
  now, because this is an intermittent error condition that happens on
  some buggy private servers.
- Added 'manual' AI mode, so you can still use most console commands while
  automatic AI is off.
- An empty adminPassword disables all authentication schemes to control Kore
- Manual move commands (east, west, north, south, etc) now take an optional
  'distance' parameter.
- Response list for refining equipments now displays correct item names
- shop.txt parser will complain if you try to vend more than 30,000 of an
  item. (Usually happens if you got price and quantity mixed up, which
  is bad for you since you'd be selling items way cheap.)
- Support for new Episode 10.2 skills
- teleportAuto_allPlayers 2 will prevent you from teleporting away from your
  party unless there are other non-party players around.
- Map viewer: better support for water areas.
- New vender_buy_fail packet (received when you fail to buy from a
  street vender due to insufficient zeny or overweight).
- New conversation code a="" to execute console commands. Example:
  talknpc 115 111 c r0 c a="is Novice Potion" c c c r0 c n
- Another mapname redirect for "force_1-1.fld => force_map1.fld"
- Added latest skills list (including Guild Skills)
- Homunculus are properly detected now. They're currently recognized as pets.
- Support for tRO's new login packets (update your servers.txt)